# databento-cpp

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FINAL_REPORT.md  INDEX.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  RUN_NOW.md  START_HERE.md  USAGE_GUIDE.md  build.sh  build_and_test.bat  setup.py
.github/workflows/: build-and-test.yml
examples/: CMakeLists.txt  batch_processing.cpp  historical_example.cpp  live_example.cpp  simple_mbo_parsing.cpp  standalone_test.cpp  ultra_fast_parsing.cpp
include/databento/: databento.hpp  dbn.hpp  enums.hpp  historical.hpp  live.hpp  types.hpp
python/: databento_py.cpp
src/: dbn.cpp  enums.cpp  historical.cpp  http_client.cpp  http_client.hpp  live.cpp
tests/: CMakeLists.txt  test_basic.cpp
